--- a/header/header.css
+++ b/header/header.css
@@ -13,8 +13,8 @@
 
     .Compras {
         font: 1.4em sans-serif;
-        color:#466802 ;
-        background-color:#A3B286;
+        color: gray ;
+        background-color:gray;
     }
 
     
