--- a/header/header.css
+++ b/header/header.css
@@ -9,12 +9,27 @@
     padding: 28px 0;
     text-align: center;
     border-bottom: 1px solid #e6e6e6;
+    background-color: rgb(255, 215, 221);
     }
 
     .Compras {
         font: 1.4em sans-serif;
         color: gray ;
         background-color:gray;
+        margin-left: -5rem;
+    }
+    .btn-descargar {
+    margin-left: 30rem;
+    padding: 5px 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+    .btn-descargar:hover {
+        background-color: #45a049;
     }
 
     
